[project]
name = "pub-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "networkx>=3.6.1",
    "redis>=8.0.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "fakeredis>=2.36.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.black]
target-version = ["py313"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not live and not db'"
markers = [
    "live: hits the deployed static site at crawler.pub over the network (run with -m live)",
    "db: runs the Graph contract suite against a real Postgres (set TEST_DATABASE_URL; run with -m db)",
]
